<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/white"
            android:layout_weight="1"
            android:theme="@style/Theme.DailyDiary.AppBarOverlay"
            tools:context=".MainActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp"
                android:background="@color/white"
                android:layout_marginTop="20dp">

                <ImageButton
                    android:id="@+id/imageButtonLeft"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:layout_gravity="center_vertical|left"
                    android:onClick="previousMonthAction"
                    app:srcCompat="@drawable/chevron_left" />



                <TextView
                    android:id="@+id/monthTV"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="January"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:textColor="@color/black"/>


                <ImageButton
                    android:id="@+id/imageButtonRight"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:layout_gravity="center_vertical|right"
                    android:onClick="nextMonthAction"
                    app:srcCompat="@drawable/chevron_right" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Monday"
                    android:textColor="@color/gray"
                    android:textAlignment="center"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Tuesday"
                    android:textColor="@color/gray"
                    android:textAlignment="center"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Wednesday"
                    android:textColor="@color/gray"
                    android:textAlignment="center"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Thursday"
                    android:textColor="@color/gray"
                    android:textAlignment="center"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Friday"
                    android:textColor="@color/gray"
                    android:textAlignment="center"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Saturday"
                    android:textColor="@color/gray"
                    android:textAlignment="center"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Sunday"
                    android:textColor="@color/gray"
                    android:textAlignment="center"
                    android:textSize="16sp"/>


            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/calendarRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>





        <LinearLayout
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/white"
            android:layout_weight="1.5"
            android:theme="@style/Theme.DailyDiary.AppBarOverlay"
            tools:context=".MainActivity">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:background="@color/black">


                    <!-- res/layout/example_activity.xml -->
                    <androidx.fragment.app.FragmentContainerView
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/fragment_container_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:name="com.onyx.dailydiary.TasksFragment" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:background="@color/black" >



                    <androidx.fragment.app.FragmentContainerView
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/fragment_container_view_summary"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:name="com.onyx.dailydiary.SummaryFragment" />

                </LinearLayout>

            </LinearLayout>




        </LinearLayout>

<!--        <LinearLayout-->
<!--            xmlns:tools="http://schemas.android.com/tools"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:orientation="vertical"-->
<!--            android:background="@color/white"-->
<!--            android:layout_weight="1.5"-->
<!--            android:theme="@style/Theme.DailyDiary.AppBarOverlay"-->
<!--            tools:context=".MainActivity">-->


<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:orientation="horizontal">-->

<!--                <TextView-->
<!--                    android:layout_width="0dp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_weight="1"-->
<!--                    android:text="@string/Monday"-->
<!--                    android:textColor="@color/gray"-->
<!--                    android:textAlignment="center"-->
<!--                    android:textSize="16sp"/>-->

<!--                <TextView-->
<!--                    android:layout_width="0dp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_weight="1"-->
<!--                    android:text="@string/Tuesday"-->
<!--                    android:textColor="@color/gray"-->
<!--                    android:textAlignment="center"-->
<!--                    android:textSize="16sp"/>-->

<!--            </LinearLayout>-->




<!--        </LinearLayout>-->

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>












